let const temoporal dead zone Syntax error Reference Error TypeError

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Shirish JS learning</title>
 
     <!--Insert your code bellow in Script -->
-    <script>
+    <!-- <script>
         function getNumber() {
             const num = parseInt(prompt("please enter a number::"));
             console.log(num);
@@ -24,7 +24,8 @@
             total += i;
         }
         console.log("Sum of numbers from 1 to " + num + " is ::" + total);
-    </script>
+    </script> -->
+    <script src="006Let&const.js"></script>
 </head>
 
 <body>
