--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
         }
         console.log("Sum of numbers from 1 to " + num + " is ::" + total);
     </script> -->
-    <script src="006Let&const.js"></script>
+    <!-- <script src="006Let&const.js"></script> -->
+    <!-- <script src="007Closures.js"></script> -->
+    <!-- <script src="test.js"></script> -->
+    <!-- <script src="ES5_6.js"></script> -->
+    <!-- <script src="010EventLoop.js"></script> -->
+    <script src="011Promise.js"></script>
 </head>
 
 <body>
     Namaste JS :)
+    <!-- <button id="clickMe">Click Me!!</button>
+    <script src="009CallBackFunction.js"></script> -->
 </body>
 
 </html>
